src/main/java/com/example/team_work_management/exception/error/UserNotFoundException.java
package com.example.team_work_management.exception.error;

public class UserNotFoundException extends RuntimeException{
    public UserNotFoundException(String message){
        super(message);
    }
}
